--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
+  
   <groupId>com.vinaysdevopslab</groupId>
   <artifactId>VinayDevOpsLab</artifactId>
   <packaging>war</packaging>
   <version>0.0.8</version>
   <name>VinayDevOpsLab</name>
   <url>http://maven.apache.org</url>
+
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
@@ -15,14 +17,21 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+
   <build>
     <finalName>${project.artifactId}-${project.version}</finalName>
     <plugins>
-        <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-war-plugin</artifactId>
-            <version>3.3.2</version> <!-- Use a newer version -->
-        </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-war-plugin</artifactId>
+        <version>3.3.2</version> <!-- Use a newer version -->
+        <configuration>
+          <!-- If you do not have web.xml, set failOnMissingWebXml to false -->
+          <failOnMissingWebXml>false</failOnMissingWebXml>
+          <!-- Optional: Set webxml path if you have a custom web.xml -->
+          <!-- <webxml>path/to/your/web.xml</webxml> -->
+        </configuration>
+      </plugin>
     </plugins>
   </build>
 </project>
